<resources>
    <string name="app_name">Code Like a Pro</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_menu">Menu</string>
    <string name="description_post_views">Views</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_save">Post save</string>
    <string name="edit_post">Edit Post</string>
    <string name="description_ic_edit">Description edit</string>
    <string name="description_ic_close">Description close</string>
    <string name="netology_edit">Edit Message</string>
    <string name="message">Message</string>
    <string name="error_empty_content">Content not be empty!</string>
    <string name="add_post">Add post</string>
    <string name="chooser_share_post">Select app</string>
    <string name="preview_video">preview Video</string>
    <string name="notApp">Not App for use</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">%1$s added new post</string>
    <string name="empty_posts">No Posts!</string>
    <string name="retry_loading">Reload</string>
    <string name="error_loading">No connection</string>
    <string name="content_description_icon_notify">icon notification</string>
    <string name="news">News</string>
    <string name="new_posts">New posts</string>
    <string name="events">Events</string>
    <string name="save">Save</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="remove">Clear</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="registration__removed">Registration removed!</string>
    <string name="student">student</string>
    <string name="secret">secret</string>
</resources>