<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:constraint_referenced_ids="lay_group">
    </androidx.constraintlayout.widget.Group>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/lay_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent">
    <ImageView
        android:id="@+id/ic_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_ic_edit"
        android:src="@drawable/edit_24"/>
    />

    <TextView
        android:id="@+id/message_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ic_edit"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/netology_edit"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/text_edit"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/message_edit"
        app:layout_constraintTop_toBottomOf="@id/message_edit"
        android:ellipsize="end"
        android:singleLine="true"
        android:hint="@string/message"
        android:maxLines="1"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_ic_close"
        android:src="@drawable/close_24"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom"
        app:layout_constraintTop_toBottomOf="@id/lay_group"
        tools:listitem="@layout/card_post"
        />
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom"
        android:layout_width="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="save, content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/barrier_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no"
        android:hint="@string/post_text"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:background="@android:color/transparent"
        android:padding="16dp"
        />
    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintTop_toTopOf="@id/content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_save"
        android:src="@drawable/ic_save_24"
        />
</androidx.constraintlayout.widget.ConstraintLayout>